[package]
name = "napmap"
version = "0.1.2"
authors = ["Hamza Jadid"]
description = "Async HashMap that halts requester tasks until the requested data is accessible"
readme = "./README.md"
license = "MIT"
keywords = ["hashmap", "async"]
categories = ["data-structures", "asynchronous", "concurrency"]
edition = "2021"
repository = "https://github.com/Ghamza-Jd/napmap"

[dependencies]
tokio = { version = "1.35.1", features = ["sync", "time", "rt"] }
tracing = "0.1.40"
indexmap = "2.2.6"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
